# quell

./: .editorconfig  .gitignore  LICENSE.md  Pipfile  README.md  cabal.project  index.html  package-lock.json  package.json
.github/workflows/: gh-pages.yml  haskell.yml
compiler/: quell.cabal
compiler/src/Language/Quell/: Prelude.hs
compiler/src/Language/Quell/Parse/: Lexer.hs  Parser.y  Type.hs
compiler/src/Language/Quell/Prelude/: Core.hs  FastString.hs  Span.hs
compiler/src/Language/Quell/Type/: Ast.hs
doc/spec/: .gitignore  Makefile  Pipfile  package-lock.json  package.json
doc/spec/source/: conf.py  index.rst
doc/spec/source/article/: evaluate_semantics.rst  implement_guide.rst  knowledge.rst  module_semantics.rst  syntax.rst
example/: Prelude.qq  fib.qq  list.qq
package/compiler/: quell-compiler.cabal
package/compiler/app/: Main.hs
package/compiler/src/Language/Quell/: Prelude.hs
package/compiler/src/Language/Quell/Data/: Bag.hs  STBuffer.hs  TextId.hs
package/compiler/src/Language/Quell/Data/Monad/: MonadST.hs
package/compiler/src/Language/Quell/Data/Unlifted/: MutInt.hs
package/compiler/src/Language/Quell/Parsing/: Lexer.hs  Parser.y  Runner.hs  Spanned.hs
package/compiler/src/Language/Quell/Parsing/Lexer/: CodeUnit.hs  Encoding.hs  Error.hs  Lexing.hs  Rules.hs
package/compiler/src/Language/Quell/Parsing/Lexer/Lexing/: CharEsc.hs
package/compiler/src/Language/Quell/Parsing/Parser/: Error.hs  Layout.hs  Runner.hs
package/compiler/src/Language/Quell/Prelude/: Core.hs  Debug.hs  Literal.hs  MonoTraversableM.hs  Text.hs  TextBuilder.hs
package/compiler/src/Language/Quell/Type/: Ast.hs  Error.hs  ErrorCode.hs  Token.hs
package/compiler/test/doctest/: Doctest.hs
package/compiler/test/spec/Language/Quell/Data/: STBufferSpec.hs
package/compiler/test/spec/Language/Quell/Data/Unlifted/: MutIntSpec.hs
package/compiler/test/spec/Language/Quell/Parsing/: LexerSpec.hs
package/compiler/test/spec/Language/Quell/Parsing/Lexer/: CodeUnitSpec.hs  EncodingSpec.hs  LexingSpec.hs  RulesSpec.hs
spec/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
spec/_sources/: index.rst.txt
spec/_sources/article/: knowledge.rst.txt  syntax.rst.txt  typing_semantics.rst.txt
spec/article/: evaluate_semantics.html  implement_guide.html  knowledge.html  module_semantics.html  syntax.html  typing_semantics.html
tools/vscode/language-quell/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
tools/vscode/language-quell/syntaxes/: quell.tmLanguage.json
